--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -2,12 +2,10 @@
 <resources>
   <string name="app_name">QuickShareMail</string>
 
-  <string name="notify_sending">メール送信中</string>
-  <string name="notify_remain">残り%d件のメールが送信待ちです。</string>
+  <string name="notify_remain">残り%1$d件のメールが送信待ち、%2$d件のメールが再送信待ちです。</string>
+  <string name="notify_remain_rest">残り%d件のメールが送信待ちです。</string>
+  <string name="notify_remain_retry">残り%d件のメールが再送信待ちです。</string>
   <string name="notify_invalid_addr">不正な送信先メールアドレスがありました。</string>
-  <string name="notify_not_processed">送信できなかったメールがあります。</string>
-  <string name="notify_retry">%d件のメールが再送信待ちです。</string>
-
   <string name="msg_fail_send">メール送信に失敗しました。\n%s</string>
   <string name="msg_fail_send_security">アクセス権限がありません。</string>
   <string name="msg_invalid_addr">不正な送信先 : %s</string>
@@ -44,6 +42,9 @@
   <string name="title_pref_smtp_ask_gmail">Gmailの使用</string>
   <string name="msg_pref_smtp_ask_gmail">SMTPサーバーの設定をGmail用に変更しますか？</string>
   <string name="msg_pref_smtp_port">不正なポート番号です。</string>
+  <string name="title_pref_smtp_ask_sec_port">ポートの変更</string>
+  <string name="msg_pref_smtp_ask_sec_ssl">ポートを SMTP over SSL 用のポート (465) に変更しますか？</string>
+  <string name="msg_pref_smtp_ask_sec_submission">ポートを SMTP 投稿用のポート (587) に変更しますか？</string>
 
   <string name="title_pref_send_to">送信先の設定</string>
   <string name="title_pref_send_to_list">送信先</string>
