--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -101,6 +101,15 @@
   <string name="menu_send_to_address_delete">アドレスの削除</string>
   <string name="menu_send_to_address_add">アドレスの追加</string>
 
+  <string name="text_format_select">...</string>
+  <string name="title_format_select">フォーマット文字列の選択</string>
+  <string name="menu_format_select_seqid">%i - 通し番号</string>
+  <string name="menu_format_select_snipbody">%s - 本文の先頭40文字</string>
+  <string name="menu_format_select_filename">%f - ファイル名</string>
+  <string name="menu_format_select_title">%t - \"%s\" または \"%f\"</string>
+  <string name="menu_format_select_time">%T - 時刻 hh:mm:ss</string>
+  <string name="menu_format_select_date">%D - 日付 YYYY/MM/DD</string>
+
   <string name="initial_label_text">テキスト</string>
   <string name="initial_label_image">画像</string>
   <string name="initial_label_movie">動画</string>
